--- a/nsi/t2/config.json
+++ b/nsi/t2/config.json
@@ -215,12 +215,12 @@
       {
         "Titre": "La programmation dynamique avec Fibonacci",
         "Type": "pdf",
-        "Href": "File/nsi_t_recherche_textuelle_2.pdf"
+        "Href": "File/nsi_t_prog_dyn_2.pdf"
       },
       {
         "Titre": "Le rendu de monnaie",
         "Type": "pdf",
-        "Href": "File/nsi_t_recherche_textuelle_3.pdf"
+        "Href": "File/nsi_t_prog_dyn_3.pdf"
       }
     ]
   }
