--- a/nsi/t2/config.json
+++ b/nsi/t2/config.json
@@ -59,14 +59,9 @@
   },
   {
     "Titre_Chap": "Les files",
-    "Table_Des_Matière": false,
-    "Sous_Chapitre": [
-      {
-        "Titre": "Le cours et les savoir-faire",
-        "Type": "pdf",
-        "Href": "File/nsi_t_file.pdf"
-      }
-    ]
+    "Table_Des_Matière": true,
+	"Pdf_Href": "File/nsi_t_file.pdf",
+    "Table_Des_Matière_Length": 2
   },
   {
     "Titre_Chap": "Les piles",
