--- a/nsi/t2/config.json
+++ b/nsi/t2/config.json
@@ -223,5 +223,12 @@
         "Href": "File/nsi_t_prog_dyn_3.pdf"
       }
     ]
-  }
+  },
+  {
+    "Titre_Chap": "Programmation dynamique",
+    "Table_Des_Matière": true,
+    "Pdf_Href": "File/nsi_t_prog_dyn.pdf",
+    "Table_Des_Matière_Length": 2
+  },
+  
 ]
