--- a/nsi/t2/config.json
+++ b/nsi/t2/config.json
@@ -227,7 +227,7 @@
   {
     "Titre_Chap": "Programmation dynamique",
     "Table_Des_Matière": true,
-    "Pdf_Href": "File/nsi_t_prog_dyn.pdf",
+    "Pdf_Href": "File/nsi_t_ch11.pdf",
     "Table_Des_Matière_Length": 1
   }
   
