--- a/nsi/t2/config.json
+++ b/nsi/t2/config.json
@@ -205,9 +205,8 @@
   },
   {
     "Titre_Chap": "Programmation dynamique",
-    "Table_Des_Matière": true,
-    "Pdf_Href": "File/nsi_t_prog_dyn.pdf",
-    "Table_Des_Matière_Length": 2
+    "Table_Des_Matière": false,
+    "Href": "File/nsi_t_prog_dyn.pdf"
   }
   
 ]
