--- a/nsi/t2/config.json
+++ b/nsi/t2/config.json
@@ -204,7 +204,7 @@
     ]
   },
   {
-    "Titre_Chap": "Recherche textuelle",
+    "Titre_Chap": "Programmation dynamique",
     "Table_Des_Matière": false,
     "Sous_Chapitre": [
       {
